feat: optimize flow ingestion
